Salesforce/main/default/main/default/objects/Estado_para_CRM__c/Estado_para_CRM__c.object-meta.xml
<CustomObject>
    <label>Estado para CRM</label>
    <nameField>
        <label>Nombre de Estado para CRM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estado para CRM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>