Salesforce/main/default/main/default/objects/Estado_para_CRM__c/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <label>CRM</label>
    <referenceTo>Resumo_da_conta__c</referenceTo>
    <relationshipLabel>Estado para CRM</relationshipLabel>
    <relationshipName>Estado_para_CRM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>