Salesforce/main/default/main/default/objects/Estado_para_CRM__c/fields/Indice__c.field-meta.xml
<CustomField>
    <fullName>Indice__c</fullName>
    <label>Indice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>