Salesforce/main/default/main/default/objects/Estado_para_CRM__c/fields/Percentagem_de_venda__c.field-meta.xml
<CustomField>
    <fullName>Percentagem_de_venda__c</fullName>
    <label>% Das vendas totais</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>